--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,7 @@
+---
+import Header from '../components/Header.astro';
+---
+
 <!doctype html>
 <html lang="zh-CN">
 	<head>
@@ -11,6 +15,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@300;400;500;700&family=Noto+Sans:wght@300;400;500&display=swap" rel="stylesheet">
 	</head>
 	<body>
+		<Header />
 		<slot />
 	</body>
 </html>
