--- a/src/pages/zh-TW/blog/index.astro
+++ b/src/pages/zh-TW/blog/index.astro
@@ -1,6 +1,8 @@
 ---
-import Layout from '../../layouts/Layout.astro';
+import Layout from '../../../layouts/Layout.astro';
+import { useTranslations, getLangFromUrl } from '../../../i18n/utils';
 
+const lang = getLangFromUrl(Astro.url);
 // 使用 Astro.glob() 獲取所有部落格文章
 const posts = await Astro.glob('./*.md');
 ---
