--- a/src/pages/en/movie-review/index.astro
+++ b/src/pages/en/movie-review/index.astro
@@ -1,9 +1,10 @@
 ---
 import Layout from '../../../layouts/Layout.astro';
+import type { ContentEntry } from '../../../types/content';
 import Navigation from '../../../components/Navigation.astro';
 
 // Get movie reviews
-const reviews = Object.values(import.meta.glob('./*.md', { eager: true }));
+const reviews = Object.values(import.meta.glob('./*.md', { eager: true })) as ContentEntry[];
 ---
 
 <Layout title="Movie Reviews - ccc333bbb" lang="en">
@@ -22,7 +23,7 @@ const reviews = Object.values(import.meta.glob('./*.md', { eager: true }));
                         <a href={review.url} class="review-link">
                             <h2 class="review-title">{review.frontmatter.title}</h2>
                             {review.frontmatter.date && (
-                                <p class="review-date">{new Date(review.frontmatter.date).toLocaleDateString('en-US')}</p>
+                                <p class="review-date">{review.frontmatter.date && new Date(review.frontmatter.date as string).toLocaleDateString('en-US')}</p>
                             )}
                             {review.frontmatter.description && (
                                 <p class="review-desc">{review.frontmatter.description}</p>
